tests/invalid_lex/bad_number.mc
int main() {
    int x;
    x = 12abc;
    return 0;
}
